docs-archive/apache-airflow-providers-databricks/7.16.1/_sources/_api/airflow/providers/databricks/exceptions/index.rst.txt
airflow.providers.databricks.exceptions
=======================================

.. py:module:: airflow.providers.databricks.exceptions

.. autoapi-nested-parse::

   Exceptions used by Databricks Provider.



Exceptions
----------

.. autoapisummary::

   airflow.providers.databricks.exceptions.DatabricksSqlExecutionError
   airflow.providers.databricks.exceptions.DatabricksSqlExecutionTimeout
   airflow.providers.databricks.exceptions.DatabricksOperatorPayloadError


Module Contents
---------------

.. py:exception:: DatabricksSqlExecutionError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when there is an error in sql execution.


.. py:exception:: DatabricksSqlExecutionTimeout

   Bases: :py:obj:`DatabricksSqlExecutionError`


   Raised when a sql execution times out.


.. py:exception:: DatabricksOperatorPayloadError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when a Databricks operator payload is invalid.


